# fuseadf

./: .gitignore  .gitlab-ci.yml  AUTHORS  CMakeLists.txt  ChangeLog  INSTALL  INSTALL.md  Makefile.am  README  README.md  autogen.sh  configure.ac
debian/: README.Debian  README.source  changelog  control  copyright
doc/: Makefile.am  fuseadf.1  notes.txt
docker/: Dockerfile  Makefile
packaging/debian/: changelog  control  copyright  fuseadf.manpages  rules
src/: CMakeLists.txt  Makefile.am  adffs.c  adffs.h  adffs_fuse_api.h  adffs_log.c  adffs_log.h  adffs_util.c  adffs_util.h  adfimage.c  adfimage.h  config.h.cmake.in  fuseadf.c  log.c  log.h  util.c  util.h
tests/: CMakeLists.txt  Makefile.am  prepare_test_data.sh  remove_test_data.sh  test_adfimage.c  test_time_to_time_t.c
tests/disks/: download_test_disks.sh  download_test_disks_adflib.sh
tests/testdata/: ffdisk0049.adf
util/: cmake_debug_configure  cmake_debug_test  cmake_debug_test_prepare_data  cmake_release_build  cmake_release_configure  cmake_release_install  cmake_release_test_prepare_data  create_quilt3_archive.sh  deb_create_quilt3_archive.sh  test_debug  test_release  test_shared  test_static
